--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
+    "dev": "railway run next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,8 +21,13 @@
   },
   "homepage": "https://github.com/deliaconstantino/url-shortener#readme",
   "dependencies": {
+    "@prisma/client": "^3.2.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "short-hash": "^1.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^3.2.1"
   }
 }
